Changelog for plone.fieldsets

    (name of developer listed in brackets)

plone.fieldsets - 1.0.2 Unreleased

    - Added conditional import logic to make the package work without Five.
      [hannosch]

plone.fieldsets - 1.0.1 Released March 9, 2008

    - Deprecated the convenience import, as it confused the test coverage tool.
      [hannosch]

    - Added tests for all aspects of the fieldsets.
      [hannosch]

    - Added tests for the edit and input forms.
      [hannosch]

plone.fieldsets - 1.0 Released August 13, 2007

    - No changes.
      [hannosch]

plone.fieldsets - 1.0rc3 Released July 28, 2007

    - Corrected missing history.
      [hannosch]

plone.fieldsets - 1.0rc2 Released July 27, 2007

    - Removed unnecessary adapters definition in FieldsetsInputForm.
      [davconvent]

    - Added FieldsetsInputForm to the available fieldsets forms.
      [davconvent]

plone.fieldsets - 1.0rc1 Released July 9, 2007

    - Removed useless setup.cfg.
      [hannosch]

plone.fieldsets - 1.0b3 Released March 5, 2007

    - Added new optional description attribute to fieldsets.
      [hannosch]

plone.fieldsets - 1.0b2 Released May 1, 2007

    - No changes.
      [hannosch]

plone.fieldsets - 1.0b1 Released March 5, 2007

    - Fixed error reporting by referencing the widgets on the form itself on
      the individual fieldsets rather than copying them.
      [duncan, nouri]

    - Initial implementation of the fieldsets class and the edit form support.
      [hannosch]

    - Initial package structure.
      [zopeskel]